fix: overlay positioning on safari

--- a/tools/preview/heatmap.css
+++ b/tools/preview/heatmap.css
@@ -33,7 +33,6 @@
 }
 
 .heatmap-overlays {
-  position: absolute;
   display: none;
   top: 0;
   left: 0;
